--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>관리의달인|광고영상공모전</title>
-    <link rel="stylesheet" href="/Users/dobby/Documents/costac_youtubead/v1.1.0/index.css">
+    <link rel="stylesheet" href="https://costac-dev.github.io/costac_youtubead/v1.1.0/index.css">
     
 </head>
 <body>
