--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
 </head>
 <body>
-        <div class="header">
+        <div class="header0">
             <a href="https://www.costac.co.kr/?n_media=27758&n_query=%EA%B4%80%EB%A6%AC%EC%9D%98%EB%8B%AC%EC%9D%B8&n_rank=1&n_ad_group=grp-a001-01-000000014767074&n_ad=nad-a001-01-000000143214670&n_keyword_id=nkw-a001-01-000002827655748&n_keyword=%EA%B4%80%EB%A6%AC%EC%9D%98%EB%8B%AC%EC%9D%B8&n_campaign_type=1&n_ad_group_type=1&NaPm=ct%3Dkrvef7s8%7Cci%3D0zm00029BKvvjoIE8f1c%7Ctr%3Dsa%7Chk%3D0472c0dabe372f1a8f2471e341089a2ea0ed21d3">
                 <img class="headerimg" src="https://i.imgur.com/rkAtRXG.png" alt="">
             </a>
@@ -17,7 +17,7 @@
                 <a href="https://www.costac.co.kr/?n_media=27758&n_query=%EA%B4%80%EB%A6%AC%EC%9D%98%EB%8B%AC%EC%9D%B8&n_rank=1&n_ad_group=grp-a001-01-000000014767074&n_ad=nad-a001-01-000000143214670&n_keyword_id=nkw-a001-01-000002827655748&n_keyword=%EA%B4%80%EB%A6%AC%EC%9D%98%EB%8B%AC%EC%9D%B8&n_campaign_type=1&n_ad_group_type=1&NaPm=ct%3Dkrvef7s8%7Cci%3D0zm00029BKvvjoIE8f1c%7Ctr%3Dsa%7Chk%3D0472c0dabe372f1a8f2471e341089a2ea0ed21d3">관리의달인</a>
                 <a href="https://costac-dev.github.io/costac_youtubead/">모집요강</a>
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSevBZb9DBiSdZjH35BcgN0YcDhIUAkw97wks-XqdSRuAkWbxQ/viewform?usp=sf_link">신청</a>
-             </div>
+            </div>
         </div>  
 
         <div class="infoimgbox">
