이미지수정

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         </div>  
 
         <div class="infoimgbox">
-            <img class="infoimg" src="https://i.imgur.com/ExnTXKG.jpg" alt="">
-            <img class="infoimg" src="https://i.imgur.com/4JCFsmj.jpg" alt="">
+            <img class="infoimg" src="https://i.imgur.com/KvIkvg0.png" alt="">
+            <img class="infoimg" src="https://i.imgur.com/BjvJpnK.jpg" alt="">
         </div>
         <!--upfooterimg-->
         <div class="upfooterimg">
