--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         </div>  
 
         <div class="infoimgbox">
-            <img class="infoimg" src="https://i.imgur.com/KvIkvg0.png" alt="">
-            <img class="infoimg" src="https://i.imgur.com/BjvJpnK.jpg" alt="">
+            <img class="infoimg" src="https://i.imgur.com/NAD824l.png" alt="">
+            <img class="infoimg" src="https://i.imgur.com/yXo7IFz.png" alt="">
         </div>
         <!--upfooterimg-->
         <div class="upfooterimg">
