이메일 변경

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <div class="infoimgbox">
             <img class="infoimg" src="https://i.imgur.com/wrt89Sv.png" alt="">
-            <img class="infoimg" src="https://i.imgur.com/jWnHLIt.png" alt="">
+            <img class="infoimg" src="https://i.imgur.com/8gQ7YiS.png" alt="">
         </div>
         <!--upfooterimg-->
         <div class="upfooterimg">
@@ -41,7 +41,7 @@
             <br>
             통신판매번호: 제2018-서울송파-0575호
             <br>
-            문의메일:cs@costac.co.kr
+            문의메일:costac74888@gmail.com
             고객센터:1800-0416
         </div>
 
