--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <div class="infoimgbox">
             <img class="infoimg" src="https://i.imgur.com/wrt89Sv.png" alt="">
-            <img class="infoimg" src="https://i.imgur.com/8gQ7YiS.png" alt="">
+            <img class="infoimg" src="https://i.imgur.com/njW63Ek.png" alt="">
         </div>
         <!--upfooterimg-->
         <div class="upfooterimg">
